Add link to 'Jak fungují sítě' in index.html

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 
 <div class="section">
     <h2>🧰 Aplikace</h2>
+     <a class="item" href="apps/site/site.html">🛜 Jak fungují sítě</a>
+    
     <a class="item" href="#">🗃 Evidence něčeho (coming soon)</a>
 </div>
 
