--- a/apps/site/site.html
+++ b/apps/site/site.html
@@ -106,4 +106,199 @@
         }
 
         .slot.correct {
-            border-
+            border-color: #66bb6a;
+            background: #e8f5e9;
+        }
+
+        .slot.wrong {
+            border-color: #ef5350;
+            background: #ffebee;
+        }
+
+        #controls {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        button {
+            padding: 8px 16px;
+            font-size: 16px;
+            border-radius: 6px;
+            border: none;
+            cursor: pointer;
+            background: #42a5f5;
+            color: white;
+        }
+
+        button:hover {
+            background: #1e88e5;
+        }
+
+        #message {
+            margin-top: 10px;
+            font-weight: bold;
+            text-align: center;
+            min-height: 24px;
+        }
+    </style>
+</head>
+<body>
+<div id="container">
+    <h1>Postav si jednoduchou síť</h1>
+
+    <div id="intro">
+        <p>
+            Přetáhni jednotlivá zařízení do správných polí tak,
+            aby vznikla jednoduchá cesta z počítače do internetu.
+        </p>
+        <ul>
+            <li>Koncové zařízení (PC, notebook, mobil)</li>
+            <li>Přepínač (switch)</li>
+            <li>Router</li>
+            <li>Internet</li>
+        </ul>
+    </div>
+
+    <div id="play-area">
+        <!-- Levá strana – zařízení -->
+        <div id="devices">
+            <h2>Zařízení</h2>
+            <div class="device" draggable="true" data-device="client">💻 Počítač</div>
+            <div class="device" draggable="true" data-device="switch">🧷 Switch</div>
+            <div class="device" draggable="true" data-device="router">📡 Router</div>
+            <div class="device" draggable="true" data-device="internet">☁️ Internet</div>
+        </div>
+
+        <!-- Pravá strana – sloty -->
+        <div id="slots">
+            <h2>Schéma sítě</h2>
+
+            <div class="slot-row">
+                <div class="slot-label">1) Koncové zařízení</div>
+                <div class="slot" data-expected="client"></div>
+            </div>
+
+            <div class="slot-row">
+                <div class="slot-label">2) Přepínač (switch)</div>
+                <div class="slot" data-expected="switch"></div>
+            </div>
+
+            <div class="slot-row">
+                <div class="slot-label">3) Router</div>
+                <div class="slot" data-expected="router"></div>
+            </div>
+
+            <div class="slot-row">
+                <div class="slot-label">4) Internet</div>
+                <div class="slot" data-expected="internet"></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="controls">
+        <button id="check">Ověřit řešení</button>
+        <button id="reset" style="margin-left:10px;background:#9e9e9e;">Reset</button>
+        <div id="message"></div>
+    </div>
+</div>
+
+<script>
+    // --- Drag & Drop logika ---
+    const devicesContainer = document.getElementById('devices');
+    const devices = document.querySelectorAll('.device');
+    const slots = document.querySelectorAll('.slot');
+    const checkButton = document.getElementById('check');
+    const resetButton = document.getElementById('reset');
+    const message = document.getElementById('message');
+
+    let draggedElement = null;
+
+    devices.forEach(device => {
+        device.addEventListener('dragstart', (e) => {
+            draggedElement = e.target;
+            e.target.classList.add('dragging');
+        });
+
+        device.addEventListener('dragend', (e) => {
+            e.target.classList.remove('dragging');
+            draggedElement = null;
+        });
+    });
+
+    slots.forEach(slot => {
+        slot.addEventListener('dragover', (e) => {
+            e.preventDefault();  // umožní drop
+            slot.classList.add('highlight');
+        });
+
+        slot.addEventListener('dragleave', () => {
+            slot.classList.remove('highlight');
+        });
+
+        slot.addEventListener('drop', (e) => {
+            e.preventDefault();
+            slot.classList.remove('highlight');
+
+            if (!draggedElement) return;
+
+            // Pokud už ve slotu něco je, vrátíme to do devices
+            if (slot.firstElementChild) {
+                devicesContainer.appendChild(slot.firstElementChild);
+            }
+
+            slot.appendChild(draggedElement);
+        });
+    });
+
+    // Ověření řešení
+    checkButton.addEventListener('click', () => {
+        let allFilled = true;
+        let allCorrect = true;
+
+        slots.forEach(slot => {
+            slot.classList.remove('correct', 'wrong');
+
+            const expected = slot.dataset.expected;
+            const child = slot.firstElementChild;
+
+            if (!child) {
+                allFilled = false;
+                allCorrect = false;
+                slot.classList.add('wrong');
+                return;
+            }
+
+            const actual = child.dataset.device;
+            if (actual === expected) {
+                slot.classList.add('correct');
+            } else {
+                slot.classList.add('wrong');
+                allCorrect = false;
+            }
+        });
+
+        if (!allFilled) {
+            message.textContent = "Ještě jsi nevyplnil(a) všechna pole.";
+            message.style.color = "#ef5350";
+        } else if (allCorrect) {
+            message.textContent = "Skvělé! Vybudoval(a) jsi správně jednoduchou síť.";
+            message.style.color = "#43a047";
+        } else {
+            message.textContent = "Něco není na správném místě. Podívej se na červená políčka.";
+            message.style.color = "#ef5350";
+        }
+    });
+
+    // Reset hry
+    resetButton.addEventListener('click', () => {
+        message.textContent = "";
+        slots.forEach(slot => {
+            slot.classList.remove('correct', 'wrong', 'highlight');
+            if (slot.firstElementChild) {
+                devicesContainer.appendChild(slot.firstElementChild);
+            }
+        });
+    });
+</script>
+</body>
+</html>
